Feat: 生成旅客购票信息数据